style: fix display flaws on small screens or mobile devices

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -62,6 +62,7 @@ header {
 .horizontal-container {
     display: flex;
     align-items: center;
+    overflow: hidden;
 }
 .horizontal-container h5, .horizontal-container h6 {
     margin: 0 10px;
@@ -131,7 +132,7 @@ aside {
 .rate-container{
     background-color: rgba(33, 37, 41, .578);
     backdrop-filter: blur(10px);
-    display: flex;
+    /* display: flex; */
     margin: 0 0 1dvh 0;
     padding: 0;
     height: 20dvh;
@@ -145,7 +146,6 @@ aside {
     gap: 10px;
     justify-content: center;
     align-items: center;
-    overflow-y: scroll;
     width: 100%;
     height: 100%;
     padding: 10px;
