--- a/styles/layoutRwd.css
+++ b/styles/layoutRwd.css
@@ -26,7 +26,7 @@
     .rate-container {
         background-color: transparent;
         backdrop-filter: blur(0px);
-        height: 10dvh;
+        height: 100%;
         margin: 0;
         transition: opacity 0.3s ease-in;
     }
@@ -34,7 +34,6 @@
         margin: 0;
     }
     .left {
-        padding-top: 1dvh;
         margin: 0;
     }
     .sidebar {
